--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body{
-    background-color: aqua;
-
-}
-
 .container {
     display: flex;
     
@@ -19,4 +14,5 @@ body{
     text-align: center;
     padding: 100px;
 }
- 
+ Um anexo
+  •  Anexos verificados pelo Gmail
