--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    background-color: aqua;
+
+}
+
 .container {
     display: flex;
     
@@ -14,5 +19,4 @@
     text-align: center;
     padding: 100px;
 }
- Um anexo
-  •  Anexos verificados pelo Gmail
+ 
